fixes R cut off in gameName

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ img {
 
 .condiment {
     display: inline;
-    padding-top: 20px;
+    padding: 20px 10px 0px 10px;
 }
 
 .gameName>h1 {
